# beat_shop

./: .gitignore  Дополнение_к_диплому.md
backend/: .env  jamendo_tracks.json  jamendo_tracks_1000.json  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 011dd3c7da1d_add_image_into_genres.py  0d9f616a6cf3_add_is_admin_to_users.py  61819ee22b81_remove_unique_constraint_user_track.py  836bedd60dbc_add_new_relantionship.py  89c47735db0d_add_plays_to_tracks.py  8c694e12a990_add_is_exclusive_sold_to_track.py  8e76958dc434_add_bpm_field_into_tracks.py  b41440b71889_initial_migration.py  bbcdf993ef88_add_role_into_users.py  cd4959ac5ccd_fix_relantioship_users_and_author.py  f256903b6536_add_license_into_purchase.py  f8f8a1146fed_add_contact_messages_table.py
backend/src/: config.py  download.py  main.py  seed.py  seed2.py  test.py
backend/src/api/: dependencies.py
backend/src/api/routes/: auth.py  author.py  contact.py  favorites.py  genres.py  listen.py  purchase.py  recommendations.py  tracks.py  user.py
backend/src/core/repositories/: author.py  base.py  contact.py  contract_repository.py  favorite.py  genre.py  interaction.py  listen.py  purchase.py  purchase_repository.py  subscription.py  user.py  (+1 more)
backend/src/database/: db_manager.py  models.py  models_test.py
backend/src/schemas/: admin_stats.py  author.py  author_stats.py  contact.py  contract.py  favorite.py  genre.py  listen.py  purchase.py  stats.py  subscription.py  track.py  user.py
backend/tests/: conftest.py  locustfile.py  test_integration.py  test_selenium.py  test_unit.py
(+64 files in other folders)
